<resources>
    <string name="app_name" translatable="false">ProjekAkhir</string>
    <string name="title_movie">Movie</string>
    <string name="title_tv_show">Tv Show</string>
    <string name="title_favorite">Favorite</string>
    <string name="more_info">More Info</string>
    <string name="release">Release</string>
    <string name="rating">Rating</string>
    <string name="overview">Overview</string>
    <string name="add_favorite">Add Favorite</string>
    <string name="delete_favorite">Delete Favorite</string>
    <string name="petik">:</string>
    <string name="language">Language</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="search">Search</string>
    <string name="empty_text">Empty Movie</string>
    <string name="widget_favorite">Movie Favorite</string>
    <string name="title_activity_settings">Settings</string>


    <string name="summary_lang">Select Language</string>
    <string name="pref_title_notifications">Notifications</string>
    <string name="summary_daily_reminder">You will reveiced daily reminder every 7 AM</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="summary_release_reminder">You will receive daily movie release info every 8 AM</string>


    <string name="release_today_reminder">Release Today Reminder</string>
    <string name="alarm_turned_on">%s turned on</string>
    <string name="alarm_turned_off">%s turned off</string>
    <string name="has_been_release">%s has been release today!</string>
    <string name="daily_notif_message">Tap Catalogue Film here!</string>


</resources>
