<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/language">
        <Preference
            android:key="language"
            android:summary="@string/summary_lang"
            android:title="@string/language"></Preference>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_title_notifications">

        <SwitchPreference
            android:defaultValue="false"
            android:key="today"
            android:summary="@string/summary_daily_reminder"
            android:title="@string/daily_reminder" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="release"
            android:summary="@string/summary_release_reminder"
            android:title="@string/release_today_reminder" />
    </PreferenceCategory>
</PreferenceScreen>